{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 91,
  "lineage": "f257388f-15ba-3fdb-068d-d8a20f27c921",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b8cfac4b7b244d9",
            "arn": "arn:aws:ec2:us-east-1:975050217683:elastic-ip/eipalloc-04b8cfac4b7b244d9",
            "association_id": "eipassoc-0473b8c86018513a7",
            "domain": "vpc",
            "id": "eipalloc-04b8cfac4b7b244d9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02f616191fe689ef9",
            "private_dns": "ip-10-0-1-149.ec2.internal",
            "private_ip": "10.0.1.149",
            "public_dns": "ec2-3-213-144-224.compute-1.amazonaws.com",
            "public_ip": "3.213.144.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "derma-app-nat-eip"
            },
            "tags_all": {
              "Name": "derma-app-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050499786ebf55a6a",
            "arn": "arn:aws:ec2:us-east-1:975050217683:instance/i-0f5f5f1bac132600e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "derma-app-ec2-instance-profile",
            "id": "i-0f5f5f1bac132600e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cea6e070ce221a85",
            "private_dns": "ip-10-0-1-66.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.66",
            "public_dns": "ec2-52-90-147-25.compute-1.amazonaws.com",
            "public_ip": "52.90.147.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0959ab1571009c9be",
                "volume_size": 200,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080cf69d077d83df3",
            "tags": {
              "Name": "derma-app-app-instance"
            },
            "tags_all": {
              "Name": "derma-app-app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-039a46929fd53dd7f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_internet_gateway.gw",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_arm64",
            "data.aws_availability_zones.available",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:internet-gateway/igw-042bef92600710084",
            "id": "igw-042bef92600710084",
            "owner_id": "975050217683",
            "tags": {
              "Name": "derma-app-igw"
            },
            "tags_all": {
              "Name": "derma-app-igw"
            },
            "vpc_id": "vpc-0da590c732a2b8c2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b8cfac4b7b244d9",
            "association_id": "eipassoc-0473b8c86018513a7",
            "connectivity_type": "public",
            "id": "nat-07845872c72459d01",
            "network_interface_id": "eni-02f616191fe689ef9",
            "private_ip": "10.0.1.149",
            "public_ip": "3.213.144.224",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-080cf69d077d83df3",
            "tags": {
              "Name": "derma-app-nat-gw"
            },
            "tags_all": {
              "Name": "derma-app-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:route-table/rtb-03c12051357058280",
            "id": "rtb-03c12051357058280",
            "owner_id": "975050217683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07845872c72459d01",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "derma-app-private-rt"
            },
            "tags_all": {
              "Name": "derma-app-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da590c732a2b8c2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:route-table/rtb-0a5f3a487e00a9134",
            "id": "rtb-0a5f3a487e00a9134",
            "owner_id": "975050217683",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042bef92600710084",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "derma-app-public-rt"
            },
            "tags_all": {
              "Name": "derma-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da590c732a2b8c2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045b10da13a971c19",
            "route_table_id": "rtb-03c12051357058280",
            "subnet_id": "subnet-05bd0076eecc7c547"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003739a6d7a6bd46a",
            "route_table_id": "rtb-03c12051357058280",
            "subnet_id": "subnet-0f6372ff31fd3d423"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8354d002602bcd6",
            "route_table_id": "rtb-0a5f3a487e00a9134",
            "subnet_id": "subnet-080cf69d077d83df3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecf36daa93d94276",
            "route_table_id": "rtb-0a5f3a487e00a9134",
            "subnet_id": "subnet-00d7ff92a7e339efa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:security-group/sg-03ba584c60a0b1437",
            "description": "Allows HTTP and HTTPS traffic to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ba584c60a0b1437",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTP de qualquer lugar",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permitir HTTPS de qualquer lugar",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "derma-app-alb-sg",
            "name_prefix": "",
            "owner_id": "975050217683",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "derma-app-alb-sg"
            },
            "tags_all": {
              "Name": "derma-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da590c732a2b8c2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:security-group/sg-039a46929fd53dd7f",
            "description": "Allows SSH and app traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039a46929fd53dd7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH (restrict CIDR in production!)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow app traffic",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "derma-app-ec2-sg",
            "name_prefix": "",
            "owner_id": "975050217683",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "derma-app-ec2-sg"
            },
            "tags_all": {
              "Name": "derma-app-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da590c732a2b8c2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:security-group/sg-0593c27591fdcf2c3",
            "description": "Allows PostgreSQL traffic from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0593c27591fdcf2c3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-039a46929fd53dd7f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "derma-app-rds-sg",
            "name_prefix": "",
            "owner_id": "975050217683",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "derma-app-rds-sg"
            },
            "tags_all": {
              "Name": "derma-app-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da590c732a2b8c2d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:subnet/subnet-05bd0076eecc7c547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bd0076eecc7c547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050217683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "derma-app-private-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "derma-app-private-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0da590c732a2b8c2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:subnet/subnet-0f6372ff31fd3d423",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6372ff31fd3d423",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050217683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "derma-app-private-subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "derma-app-private-subnet-us-east-1b"
            },
            "vpc_id": "vpc-0da590c732a2b8c2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:subnet/subnet-080cf69d077d83df3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080cf69d077d83df3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050217683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "derma-app-public-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "derma-app-public-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0da590c732a2b8c2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:subnet/subnet-00d7ff92a7e339efa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d7ff92a7e339efa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050217683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "derma-app-public-subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "derma-app-public-subnet-us-east-1b"
            },
            "vpc_id": "vpc-0da590c732a2b8c2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050217683:vpc/vpc-0da590c732a2b8c2d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0262ea724c2cd12eb",
            "default_route_table_id": "rtb-010a9de22db933ee0",
            "default_security_group_id": "sg-01190052787bf68fc",
            "dhcp_options_id": "dopt-03bd2391cf760f708",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da590c732a2b8c2d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010a9de22db933ee0",
            "owner_id": "975050217683",
            "tags": {
              "Name": "derma-app-vpc"
            },
            "tags_all": {
              "Name": "derma-app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}